--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "*.inc": "c",
         "stdio.h": "c",
         "init.h": "c",
-        "interrupt.h": "c"
+        "interrupt.h": "c",
+        "mutex": "c",
+        "condition_variable": "c"
     }
 }
