chore: add TODO for donation multiple

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "init.h": "c",
         "interrupt.h": "c",
         "mutex": "c",
-        "condition_variable": "c"
+        "condition_variable": "c",
+        "random": "c"
     }
 }
