--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,8 @@
         "interrupt.h": "c",
         "mutex": "c",
         "condition_variable": "c",
-        "random": "c"
+        "random": "c",
+        "main.h": "c",
+        "syscall.h": "c"
     }
 }
