--- a/src/Makefile.build
+++ b/src/Makefile.build
@@ -61,12 +61,12 @@ userprog_SRC += userprog/syscall.c	# System call handler.
 userprog_SRC += userprog/gdt.c		# GDT initialization.
 userprog_SRC += userprog/tss.c		# TSS management.
 
-# Virtual Memory code
-vm_SRC = vm/vm.c			  # VM controller
-vm_SRC = vm/frame.c			# Frame and frame table controller.
-vm_SRC = vm/page.c			# Supplemental Page table controller.
-vm_SRC = vm/mmap.c			# Memory Mapping controller.
-vm_SRC = vm/swap.c			# Swap table controller.
+# Virtual Memory code.
+vm_SRC = vm/vm.c	# VM controller.
+vm_SRC += vm/frame.c	# Frame and frame table controller.
+vm_SRC += vm/page.c	# Supplemental Page table controller.
+vm_SRC += vm/mmap.c	# Memory Mapping controller.
+vm_SRC += vm/swap.c	# Swap table controller.
 
 # Filesystem code.
 filesys_SRC  = filesys/filesys.c	# Filesystem core.
